# alidistlint

./: .gitignore  README.md  alidistlint  pyproject.toml
.github/workflows/: release.yml
nvim/alidistlint/: README.md  init.lua
src/alidistlint/: __init__.py  __main__.py  common.py  git.py  headerlint.py  run.py  scriptlint.py  shellcheck.py  yamllint.py
