[project]
name = "alidistlint"
description = "A code linter for alidist packages"
version = "0.0.1"
authors = [
  { name="Timo Wilken", email="timo.wilken@cern.ch" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "cerberus",
  "pyyaml",
]

[project.optional-dependencies]
linters = [
  "yamllint",
]

[project.scripts]
alidistlint = "alidistlint.run:main"

[project.urls]
Homepage = "https://github.com/TimoWilken/alidistlint"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
