[project]
name = "alidistlint"
description = "A code linter for alidist packages"
dynamic = ["version"]
readme = "README.md"
# We need __future__.annotations (3.7+).
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "cerberus",
  "pyyaml",
]

[project.optional-dependencies]
linters = [
  "yamllint",
  # "shellcheck",    # shellcheck is not Python, so can't depend on it here.
]

[project.scripts]
alidistlint = "alidistlint.run:main"

[[project.authors]]
name = "Timo Wilken"
email = "timo.wilken@cern.ch"

[project.urls]
Homepage = "https://github.com/TimoWilken/alidistlint"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
# Documentation on where setuptools looks for packages:
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#auto-discovery

[tool.setuptools_scm]
write_to = "src/alidistlint/_version.py"
